# framework-system

./: Cargo.toml  README.md
.github/workflows/: ci.yml
framework_lib/: Cargo.toml
framework_lib/src/: lib.rs  power.rs  smbios.rs  util.rs
framework_lib/src/ccgx/: mod.rs
framework_lib/src/chromium_ec/: command.rs  commands.rs  mod.rs  portio.rs  windows.rs
framework_lib/src/commandline/: clap_std.rs  mod.rs  uefi.rs
framework_tool/: Cargo.toml  build.rs
